test/cases/compile_errors/stage1/obj/use_invalid_number_literal_as_array_index.zig
var v = 25;
export fn entry() void {
    var arr: [v]u8 = undefined;
    _ = arr;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:1:1: error: unable to infer variable type
